Additional packages / Countries constants and model / Modules updates / Highcharts chart component

--- a/covid-tracker/src/app/shared/forms/form-elements/select/basic/components/basic-select.component.html
+++ b/covid-tracker/src/app/shared/forms/form-elements/select/basic/components/basic-select.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="fill">
+<mat-form-field appearance="fill" class="mat-form-field">
   <ng-container *ngIf="config?.label">
     <mat-label> {{ config?.label }} </mat-label>
   </ng-container>
