--- a/covid-tracker/src/styles.scss
+++ b/covid-tracker/src/styles.scss
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'src/app/assets/scss/_base';
+
+* {
+  margin: 0;
+  padding: 0;
+}
