--- a/covid-tracker/src/app/modules/public/dashboard/components/dashboard.component.html
+++ b/covid-tracker/src/app/modules/public/dashboard/components/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<div
+  class="dashboard-container d-flex justify-content-center align-items-center"
+>
+  <div class="country-selector-container">
+    <app-basic-select
+      [config]="selectCountryConfig"
+      (selectionChange)="onSelectionChange($event)"
+    ></app-basic-select>
+  </div>
+
+  <div class="chart-container">
+    <app-highcharts-chart
+      [chartOptions]="confirmedCasesPerCountryChartOptions"
+    ></app-highcharts-chart>
+  </div>
+</div>
